--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
     "nodemailer": "^6.9.8",
